--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PORT = 8080
-DB_CONNECT = mongodb+srv://riotgamelolgare:<password>@avatar.sizyxsy.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://riotgamelolgare:<password>@server-avatar.araeq3r.mongodb.net/?retryWrites=true&w=majority
