--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-DB_CONNECT = mongodb+srv://riotgamelolgare:6XcKaHVfzCjpEOpY@server-avatar.araeq3r.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECT = mongodb+srv://riotgamelolgare:6XcKaHVfzCjpEOpY@server-avatar.araeq3r.mongodb.net/user_api_dev?retryWrites=true&w=majority
