--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-MONGODB_URL = mongodb+srv://riotgamelolgare:6XcKaHVfzCjpEOpY@server-avatar.araeq3r.mongodb.net/user_api_dev?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://vercel-admin-user-642ae2b81d46bc0bf825c04f:ICr2eNbnHMwpw0ON@server-avatar.araeq3r.mongodb.net/user_api_dev?retryWrites=true&w=majority
