--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "morgan": "~1.9.1",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.22",
-        "pug": "2.0.0-beta11"
+        "pug": "2.0.0-beta11",
+        "vercel": "^28.18.3"
     }
 }
