--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,13 @@
     "builds": [
         {
             "src": "./app.js",
-            "use": "@now/node-server"
+            "use": "@vercel/node"
         }
     ],
     "routes": [
-        { "handle": "filesystem" },
         {
-            "src": "/.*",
-            "dest": "app.js"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
