--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "nodemon ./bin/www localhost 8080"
     },
     "dependencies": {
+        "@socket.io/admin-ui": "^0.5.1",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
         "debug": "~2.6.9",
@@ -17,6 +18,7 @@
         "morgan": "~1.9.1",
         "multer": "^1.4.5-lts.1",
         "nodemon": "^2.0.22",
-        "pug": "2.0.0-beta11"
+        "pug": "2.0.0-beta11",
+        "socket.io": "^4.6.1"
     }
 }
